Modify the class names to be unique

--- a/Roadmap/roadmap.html
+++ b/Roadmap/roadmap.html
@@ -1,41 +1,41 @@
 ---
 layout: default
-title: Blogging Like a Hacker
+title: Roadmap
 ---
 
-<div class="timeline">
-  <div class="container left">
-    <div class="content">
+<div class="JRMtimeline">
+  <div class="JRMcontainer JRMleft">
+    <div class="JRMcontent">
       <h2>1Q 2018</h2>
       <p>This is a test of text that will be displaye din the timeline</p>
     </div>
   </div>
-  <div class="container right">
-    <div class="content">
+  <div class="JRMcontainer JRMright">
+    <div class="JRMcontent">
       <h2>2Q 2018</h2>
       <p>This is a test of text that will be displaye din the timeline</p>
     </div>
   </div>
-  <div class="container left">
-    <div class="content">
+  <div class="JRMcontainer JRMleft">
+    <div class="JRMcontent">
       <h2>3Q 2018</h2>
       <p>This is a test of text that will be displaye din the timeline</p>
     </div>
   </div>
-  <div class="container right">
-    <div class="content">
+  <div class="JRMcontainer JRMright">
+    <div class="JRMcontent">
       <h2>4Q 2018</h2>
       <p>This is a test of text that will be displaye din the timeline</p>
     </div>
   </div>
-  <div class="container left">
-    <div class="content">
+  <div class="JRMcontainer JRMleft">
+    <div class="JRMcontent">
       <h2>1Q 2019</h2>
       <p>This is a test of text that will be displaye din the timeline</p>
     </div>
   </div>
-  <div class="container right">
-    <div class="content">
+  <div class="JRMcontainer JRMright">
+    <div class="JRMcontent">
       <h2>2Q 2019</h2>
       <p>This is a test of text that will be displaye din the timeline</p>
     </div>
